【修改】弃用exec()，修改cmd命令前缀